# p2p-store

./: .gitignore  .vercelignore  CLAUDE.md  CONVERSION_SUMMARY.md  Cargo.toml  README.md  WASM_DEPLOYMENT.md  anthropic_wasm.d.ts  anthropic_wasm.wasm  eslint.config.js  index.html  package.json  pnpm-lock.yaml  test-wasm-api.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.apps.config.ts  vite.config.ts
.claude/agents/: anthropic-api-integrator.md  p2p-app-builder.md  threejs-3d-ui-developer.md  vercel-rust-deployer.md  vercel-wasm-functions-expert.md
api/: generate-todo-wasm.rs  generate-todo.js  generate-todo.rs  generate-todo.ts  generate.js  generate.rs  generate.ts
apps/: notepad.tsx
public/: manifest.json
public/apps/notepad/: manifest.json
server/: .gitignore  Cargo.toml
server/src/: main.rs
src/: config.ts  declarations.d.ts  lib.rs  main.tsx  router.tsx  state.ts  style.css  types.ts
src/apps/: notepad.tsx
src/components/: app-entry.tsx  app-icon.tsx  app-install-page.tsx  app-list.tsx  app-renderer.tsx  profile.tsx  sidebar.tsx  spinner.tsx  status-indicator.tsx
src/components/3d/: app-grid-3d.tsx  frame-system-3d.tsx  gesture-system.tsx  house-environment.tsx  launcher.tsx  layout-manager-3d.tsx  layout-manager.tsx  scene.tsx  sidebar-3d.tsx  sidebar.tsx  use-window-manager.ts  window-3d.tsx  window-manager-3d.tsx  window.tsx
src/components/format/: money.tsx
src/components/forms/: input.tsx
src/components/icons/: close.tsx
src/libs/: anthropic.ts  db.ts  ui.ts
src/pages/: 404.tsx  _layout.tsx  app.tsx  create-app.tsx  dashboard.tsx  home.tsx
src/state/: 3d.ts  app-ecosystem.ts
