[package]
name = "p2p-store-api"
version = "0.1.0"
edition = "2021"

# Binary targets for Vercel Functions
[[bin]]
name = "generate"
path = "api/generate.rs"

[[bin]]
name = "generate-todo"
path = "api/generate-todo.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
vercel_runtime = "1.1.0"