[package]
name = "p2p-store-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Binary targets for Vercel Functions (kept for reference)
[[bin]]
name = "generate"
path = "api/generate-wasm.rs"

[[bin]]
name = "generate-todo"
path = "api/generate-todo-wasm.rs"

[dependencies]
# Keep Vercel runtime dependencies for reference binaries
tokio = { version = "1", features = ["macros", "rt"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
vercel_runtime = { version = "1.1.0", optional = true }

# WASM dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  "Window",
]

[features]
default = []
vercel = ["tokio", "reqwest", "vercel_runtime"]
